deployment-cm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cm-deployment
  namespace: homework
  labels:
    app: cm-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cm-deployment
  template:
    metadata:
      labels:
        app: cm-deployment
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
         - containerPort: 80
        volumeMounts:
        - name: api-html
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool
        ports:
         - containerPort: 8080
      volumes:
      - name: api-html
        configMap:
          name: api-html

---
apiVersion: v1
kind: Service
metadata:
  name: cm-de-svc
  namespace: homework
spec:
  selector:
    app: cm-deployment
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
    - protocol: TCP
      name: multitool
      port: 8080
      targetPort: 8080
  externalIPs:
    - 192.168.0.105
