nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: homework
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
         - containerPort: 80
        volumeMounts:
        - name: api2-html
          mountPath: /usr/share/nginx/html
      
      volumes:
      - name: api2-html
        configMap:
          name: api2-html

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: suntsovvv.tplinkdns.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
  tls:
    - hosts:
      - suntsovvv.tplinkdns.com
      secretName: secret-tls

    
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: homework
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      name: nginx
      port: 80
      targetPort: 80
